--- a/src/WebHook.Translator/ClientApp/package.json
+++ b/src/WebHook.Translator/ClientApp/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "vite-plugin-mkcert": "^1.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
