--- a/src/WebHook.Translator/WebHook.Translator.csproj
+++ b/src/WebHook.Translator/WebHook.Translator.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Betalgo.OpenAI.Utilities" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.10" />
     <PackageReference Include="MongoDB.Bson" Version="2.21.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
